--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,3 +1,7 @@
 <p>
   login works!
 </p>
+
+<input type="text" #userName/>
+<input type="password" #password/>
+<button (click)="login(userName.value, password.value)">Login</button>
