--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -5,3 +5,4 @@
 <input type="text" #userName/>
 <input type="password" #password/>
 <button (click)="login(userName.value, password.value)">Login</button>
+<button (click)="logout()">Logout</button>
